Working 0.5 PWM on M0

--- a/Odrive.ioc
+++ b/Odrive.ioc
@@ -180,6 +180,7 @@ PA1.GPIO_Label=M1_TEMP
 PA1.Signal=ADCx_IN1
 PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=M0_CH
+PA10.Locked=true
 PA10.Signal=S_TIM1_CH3
 PA11.Mode=Device_Only
 PA11.Signal=USB_OTG_FS_DM
@@ -210,22 +211,27 @@ PA6.GPIO_Label=AUX_V
 PA6.Signal=ADCx_IN6
 PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=M1_AL
+PA7.Locked=true
 PA7.Mode=PWM Generation1 CH1 CH1N
 PA7.Signal=TIM8_CH1N
 PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=M0_AH
+PA8.Locked=true
 PA8.Signal=S_TIM1_CH1
 PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=M0_BH
+PA9.Locked=true
 PA9.Signal=S_TIM1_CH2
 PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=M1_BL
+PB0.Locked=true
 PB0.Mode=PWM Generation2 CH2 CH2N
-PB0.Signal=TIM1_CH2N
+PB0.Signal=TIM8_CH2N
 PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=M1_CL
+PB1.Locked=true
 PB1.Mode=PWM Generation3 CH3 CH3N
-PB1.Signal=TIM1_CH3N
+PB1.Signal=TIM8_CH3N
 PB10.GPIOParameters=GPIO_Label
 PB10.GPIO_Label=AUX_L
 PB10.Locked=true
@@ -240,16 +246,19 @@ PB12.Locked=true
 PB12.Signal=GPIO_Output
 PB13.GPIOParameters=GPIO_Label
 PB13.GPIO_Label=M0_AL
+PB13.Locked=true
 PB13.Mode=PWM Generation1 CH1 CH1N
 PB13.Signal=TIM1_CH1N
 PB14.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=M0_BL
+PB14.Locked=true
 PB14.Mode=PWM Generation2 CH2 CH2N
-PB14.Signal=TIM8_CH2N
+PB14.Signal=TIM1_CH2N
 PB15.GPIOParameters=GPIO_Label
 PB15.GPIO_Label=M0_CL
+PB15.Locked=true
 PB15.Mode=PWM Generation3 CH3 CH3N
-PB15.Signal=TIM8_CH3N
+PB15.Signal=TIM1_CH3N
 PB2.GPIOParameters=GPIO_Label
 PB2.GPIO_Label=GPIO_1
 PB2.Locked=true
@@ -314,12 +323,15 @@ PC5.GPIO_Label=M0_TEMP
 PC5.Signal=ADCx_IN15
 PC6.GPIOParameters=GPIO_Label
 PC6.GPIO_Label=M1_AH
+PC6.Locked=true
 PC6.Signal=S_TIM8_CH1
 PC7.GPIOParameters=GPIO_Label
 PC7.GPIO_Label=M1_BH
+PC7.Locked=true
 PC7.Signal=S_TIM8_CH2
 PC8.GPIOParameters=GPIO_Label
 PC8.GPIO_Label=M1_CH
+PC8.Locked=true
 PC8.Signal=S_TIM8_CH3
 PC9.GPIOParameters=GPIO_Label
 PC9.GPIO_Label=M0_DC_CAL
