only push to queue when measuring real current

--- a/Odrive.ioc
+++ b/Odrive.ioc
@@ -153,7 +153,7 @@ Mcu.Pin7=PC2
 Mcu.Pin8=PC3
 Mcu.Pin9=PA0-WKUP
 Mcu.PinsNb=55
-Mcu.UserConstants=
+Mcu.UserConstants=TIM_CLOCK_HZ,84000000
 Mcu.UserName=STM32F405RGTx
 MxCube.Version=4.17.0
 MxDb.Version=DB.4.0.170
