--- a/Odrive.ioc
+++ b/Odrive.ioc
@@ -153,7 +153,7 @@ Mcu.Pin7=PC2
 Mcu.Pin8=PC3
 Mcu.Pin9=PA0-WKUP
 Mcu.PinsNb=55
-Mcu.UserConstants=TIM_CLOCK_HZ,84000000
+Mcu.UserConstants=TIM_CLOCK_HZ,84000000;TIM_PERIOD_CLOCKS,4096;TIM_DEADTIME_CLOCKS,20
 Mcu.UserName=STM32F405RGTx
 MxCube.Version=4.17.0
 MxDb.Version=DB.4.0.170
@@ -480,7 +480,7 @@ TIM1.Channel-Output\ Compare4\ No\ Output=TIM_CHANNEL_4
 TIM1.Channel-PWM\ Generation2\ CH2\ CH2N=TIM_CHANNEL_2
 TIM1.Channel-PWM\ Generation3\ CH3\ CH3N=TIM_CHANNEL_3
 TIM1.CounterMode=TIM_COUNTERMODE_CENTERALIGNED3
-TIM1.DeadTime=20
+TIM1.DeadTime=TIM_DEADTIME_CLOCKS
 TIM1.IPParameters=Channel-PWM Generation2 CH2 CH2N,Channel-PWM Generation3 CH3 CH3N,OCNPolarity_1,OCNPolarity_2,OCNPolarity_3,CounterMode,OCMode_PWM-PWM Generation1 CH1 CH1N,OCMode_PWM-PWM Generation2 CH2 CH2N,OCMode_PWM-PWM Generation3 CH3 CH3N,Period,DeadTime,OffStateRunMode,OffStateIDLEMode,Channel-Output Compare4 No Output,TIM_MasterOutputTrigger
 TIM1.OCMode_PWM-PWM\ Generation1\ CH1\ CH1N=TIM_OCMODE_PWM2
 TIM1.OCMode_PWM-PWM\ Generation2\ CH2\ CH2N=TIM_OCMODE_PWM2
@@ -490,7 +490,7 @@ TIM1.OCNPolarity_2=TIM_OCNPOLARITY_HIGH
 TIM1.OCNPolarity_3=TIM_OCNPOLARITY_HIGH
 TIM1.OffStateIDLEMode=TIM_OSSI_ENABLE
 TIM1.OffStateRunMode=TIM_OSSR_ENABLE
-TIM1.Period=4096
+TIM1.Period=TIM_PERIOD_CLOCKS
 TIM1.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 TIM3.EncoderMode=TIM_ENCODERMODE_TI12
 TIM3.IC1Filter=4
@@ -508,14 +508,14 @@ TIM8.Channel-Output\ Compare4\ No\ Output=TIM_CHANNEL_4
 TIM8.Channel-PWM\ Generation2\ CH2\ CH2N=TIM_CHANNEL_2
 TIM8.Channel-PWM\ Generation3\ CH3\ CH3N=TIM_CHANNEL_3
 TIM8.CounterMode=TIM_COUNTERMODE_CENTERALIGNED3
-TIM8.DeadTime=20
+TIM8.DeadTime=TIM_DEADTIME_CLOCKS
 TIM8.IPParameters=Channel-PWM Generation3 CH3 CH3N,Channel-PWM Generation2 CH2 CH2N,CounterMode,Period,OffStateRunMode,OffStateIDLEMode,DeadTime,OCMode_PWM-PWM Generation1 CH1 CH1N,OCMode_PWM-PWM Generation2 CH2 CH2N,OCMode_PWM-PWM Generation3 CH3 CH3N,Channel-Output Compare4 No Output,TIM_MasterOutputTrigger
 TIM8.OCMode_PWM-PWM\ Generation1\ CH1\ CH1N=TIM_OCMODE_PWM2
 TIM8.OCMode_PWM-PWM\ Generation2\ CH2\ CH2N=TIM_OCMODE_PWM2
 TIM8.OCMode_PWM-PWM\ Generation3\ CH3\ CH3N=TIM_OCMODE_PWM2
 TIM8.OffStateIDLEMode=TIM_OSSI_ENABLE
 TIM8.OffStateRunMode=TIM_OSSR_ENABLE
-TIM8.Period=4096
+TIM8.Period=TIM_PERIOD_CLOCKS
 TIM8.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 VP_FREERTOS_VS_ENABLE.Mode=Enabled
 VP_FREERTOS_VS_ENABLE.Signal=FREERTOS_VS_ENABLE
