--- a/Odrive.ioc
+++ b/Odrive.ioc
@@ -33,10 +33,11 @@ ADC2.DataAlign=ADC_DATAALIGN_RIGHT
 ADC2.DiscontinuousConvMode=DISABLE
 ADC2.EOCSelection=ADC_EOC_SINGLE_CONV
 ADC2.EnableAnalogWatchDog=false
-ADC2.ExternalTrigConvEdge=ADC_EXTERNALTRIGCONVEDGE_NONE
+ADC2.ExternalTrigConv=ADC_EXTERNALTRIGCONV_T8_TRGO
+ADC2.ExternalTrigConvEdge=ADC_EXTERNALTRIGCONVEDGE_RISING
 ADC2.ExternalTrigInjecConv=ADC_EXTERNALTRIGINJECCONV_T1_CC4
 ADC2.ExternalTrigInjecConvEdge=ADC_EXTERNALTRIGINJECCONVEDGE_RISING
-ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler,Resolution,DataAlign,ScanConvMode,ContinuousConvMode,DiscontinuousConvMode,DMAContinuousRequests,EOCSelection,NbrOfConversion,InjNumberOfConversion,EnableAnalogWatchDog,Rank-1\#ChannelInjectedConversion,Channel-1\#ChannelInjectedConversion,SamplingTime-1\#ChannelInjectedConversion,InjectedOffset-1\#ChannelInjectedConversion,ExternalTrigInjecConvEdge,ExternalTrigConvEdge,InjectedConvMode,ExternalTrigInjecConv
+ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler,Resolution,DataAlign,ScanConvMode,ContinuousConvMode,DiscontinuousConvMode,DMAContinuousRequests,EOCSelection,NbrOfConversion,InjNumberOfConversion,EnableAnalogWatchDog,Rank-1\#ChannelInjectedConversion,Channel-1\#ChannelInjectedConversion,SamplingTime-1\#ChannelInjectedConversion,InjectedOffset-1\#ChannelInjectedConversion,ExternalTrigInjecConvEdge,ExternalTrigConvEdge,InjectedConvMode,ExternalTrigInjecConv,ExternalTrigConv
 ADC2.InjNumberOfConversion=1
 ADC2.InjectedConvMode=None
 ADC2.InjectedOffset-1\#ChannelInjectedConversion=0
@@ -57,10 +58,11 @@ ADC3.DataAlign=ADC_DATAALIGN_RIGHT
 ADC3.DiscontinuousConvMode=DISABLE
 ADC3.EOCSelection=ADC_EOC_SINGLE_CONV
 ADC3.EnableAnalogWatchDog=false
-ADC3.ExternalTrigConvEdge=ADC_EXTERNALTRIGCONVEDGE_NONE
+ADC3.ExternalTrigConv=ADC_EXTERNALTRIGCONV_T8_TRGO
+ADC3.ExternalTrigConvEdge=ADC_EXTERNALTRIGCONVEDGE_RISING
 ADC3.ExternalTrigInjecConv=ADC_EXTERNALTRIGINJECCONV_T1_CC4
 ADC3.ExternalTrigInjecConvEdge=ADC_EXTERNALTRIGINJECCONVEDGE_RISING
-ADC3.IPParameters=Rank-7\#ChannelRegularConversion,Channel-7\#ChannelRegularConversion,SamplingTime-7\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler,Resolution,DataAlign,ScanConvMode,ContinuousConvMode,DiscontinuousConvMode,DMAContinuousRequests,EOCSelection,NbrOfConversion,ExternalTrigConvEdge,InjNumberOfConversion,EnableAnalogWatchDog,Rank-8\#ChannelInjectedConversion,Channel-8\#ChannelInjectedConversion,SamplingTime-8\#ChannelInjectedConversion,InjectedOffset-8\#ChannelInjectedConversion,ExternalTrigInjecConvEdge,InjectedConvMode,ExternalTrigInjecConv
+ADC3.IPParameters=Rank-7\#ChannelRegularConversion,Channel-7\#ChannelRegularConversion,SamplingTime-7\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler,Resolution,DataAlign,ScanConvMode,ContinuousConvMode,DiscontinuousConvMode,DMAContinuousRequests,EOCSelection,NbrOfConversion,ExternalTrigConvEdge,InjNumberOfConversion,EnableAnalogWatchDog,Rank-8\#ChannelInjectedConversion,Channel-8\#ChannelInjectedConversion,SamplingTime-8\#ChannelInjectedConversion,InjectedOffset-8\#ChannelInjectedConversion,ExternalTrigInjecConvEdge,InjectedConvMode,ExternalTrigInjecConv,ExternalTrigConv
 ADC3.InjNumberOfConversion=1
 ADC3.InjectedConvMode=None
 ADC3.InjectedOffset-8\#ChannelInjectedConversion=0
