get encoders working

--- a/Odrive.ioc
+++ b/Odrive.ioc
@@ -496,16 +496,18 @@ TIM1.Period=TIM_PERIOD_CLOCKS
 TIM1.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 TIM3.EncoderMode=TIM_ENCODERMODE_TI12
 TIM3.IC1Filter=4
-TIM3.IC1Polarity=TIM_ICPOLARITY_BOTHEDGE
+TIM3.IC1Polarity=TIM_ICPOLARITY_RISING
 TIM3.IC2Filter=4
-TIM3.IC2Polarity=TIM_ICPOLARITY_BOTHEDGE
-TIM3.IPParameters=EncoderMode,IC1Polarity,IC2Polarity,IC1Filter,IC2Filter
+TIM3.IC2Polarity=TIM_ICPOLARITY_RISING
+TIM3.IPParameters=EncoderMode,IC1Polarity,IC2Polarity,IC1Filter,IC2Filter,Period
+TIM3.Period=0xffff
 TIM4.EncoderMode=TIM_ENCODERMODE_TI12
 TIM4.IC1Filter=4
-TIM4.IC1Polarity=TIM_ICPOLARITY_BOTHEDGE
+TIM4.IC1Polarity=TIM_ICPOLARITY_RISING
 TIM4.IC2Filter=4
-TIM4.IC2Polarity=TIM_ICPOLARITY_BOTHEDGE
-TIM4.IPParameters=EncoderMode,IC1Polarity,IC2Polarity,IC1Filter,IC2Filter
+TIM4.IC2Polarity=TIM_ICPOLARITY_RISING
+TIM4.IPParameters=EncoderMode,IC1Polarity,IC2Polarity,IC1Filter,IC2Filter,Period
+TIM4.Period=0xffff
 TIM8.Channel-Output\ Compare4\ No\ Output=TIM_CHANNEL_4
 TIM8.Channel-PWM\ Generation2\ CH2\ CH2N=TIM_CHANNEL_2
 TIM8.Channel-PWM\ Generation3\ CH3\ CH3N=TIM_CHANNEL_3
