--- a/Odrive.ioc
+++ b/Odrive.ioc
@@ -8,10 +8,11 @@ ADC1.DataAlign=ADC_DATAALIGN_RIGHT
 ADC1.DiscontinuousConvMode=DISABLE
 ADC1.EOCSelection=ADC_EOC_SINGLE_CONV
 ADC1.EnableAnalogWatchDog=false
+ADC1.ExternalTrigConv=ADC_SOFTWARE_START
 ADC1.ExternalTrigConvEdge=ADC_EXTERNALTRIGCONVEDGE_NONE
 ADC1.ExternalTrigInjecConv=ADC_EXTERNALTRIGINJECCONV_T1_CC4
 ADC1.ExternalTrigInjecConvEdge=ADC_EXTERNALTRIGINJECCONVEDGE_RISING
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master,ClockPrescaler,Resolution,DataAlign,ScanConvMode,ContinuousConvMode,DiscontinuousConvMode,DMAContinuousRequests,EOCSelection,NbrOfConversion,ExternalTrigConvEdge,InjNumberOfConversion,EnableAnalogWatchDog,Rank-1\#ChannelInjectedConversion,Channel-1\#ChannelInjectedConversion,SamplingTime-1\#ChannelInjectedConversion,InjectedOffset-1\#ChannelInjectedConversion,InjectedConvMode,ExternalTrigInjecConvEdge,ExternalTrigInjecConv
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master,ClockPrescaler,Resolution,DataAlign,ScanConvMode,ContinuousConvMode,DiscontinuousConvMode,DMAContinuousRequests,EOCSelection,NbrOfConversion,ExternalTrigConvEdge,InjNumberOfConversion,EnableAnalogWatchDog,Rank-1\#ChannelInjectedConversion,Channel-1\#ChannelInjectedConversion,SamplingTime-1\#ChannelInjectedConversion,InjectedOffset-1\#ChannelInjectedConversion,InjectedConvMode,ExternalTrigInjecConvEdge,ExternalTrigInjecConv,ExternalTrigConv
 ADC1.InjNumberOfConversion=1
 ADC1.InjectedConvMode=None
 ADC1.InjectedOffset-1\#ChannelInjectedConversion=0
@@ -157,8 +158,8 @@ Mcu.Pin9=PA0-WKUP
 Mcu.PinsNb=55
 Mcu.UserConstants=TIM_CLOCK_HZ,168000000;TIM_PERIOD_CLOCKS,8192;TIM_DEADTIME_CLOCKS,20
 Mcu.UserName=STM32F405RGTx
-MxCube.Version=4.17.0
-MxDb.Version=DB.4.0.170
+MxCube.Version=4.19.0
+MxDb.Version=DB.4.0.190
 NVIC.ADC_IRQn=true\:5\:0\:false\:true\:true\:1\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false
@@ -289,12 +290,12 @@ PC11.Mode=Full_Duplex_Master
 PC11.Signal=SPI3_MISO
 PC12.Mode=Full_Duplex_Master
 PC12.Signal=SPI3_MOSI
-PC13-ANTI_TAMP.GPIOParameters=GPIO_Label,PinState
+PC13-ANTI_TAMP.GPIOParameters=PinState,GPIO_Label
 PC13-ANTI_TAMP.GPIO_Label=M0_nCS
 PC13-ANTI_TAMP.Locked=true
 PC13-ANTI_TAMP.PinState=GPIO_PIN_SET
 PC13-ANTI_TAMP.Signal=GPIO_Output
-PC14-OSC32_IN.GPIOParameters=GPIO_Label,PinState
+PC14-OSC32_IN.GPIOParameters=PinState,GPIO_Label
 PC14-OSC32_IN.GPIO_Label=M1_nCS
 PC14-OSC32_IN.Locked=true
 PC14-OSC32_IN.PinState=GPIO_PIN_SET
@@ -334,13 +335,13 @@ PC9.Signal=GPIO_Output
 PCC.Checker=false
 PCC.Line=STM32F405/415
 PCC.MCU=STM32F405RGTx
-PCC.MXVersion=4.17.0
+PCC.MXVersion=4.19.0
 PCC.PartNumber=STM32F405RGTx
 PCC.Seq0=0
 PCC.Series=STM32F4
 PCC.Temperature=25
 PCC.Vdd=3.3
-PD2.GPIOParameters=GPIO_Label,GPIO_PuPd
+PD2.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD2.GPIO_Label=nFAULT
 PD2.GPIO_PuPd=GPIO_PULLUP
 PD2.Locked=true
@@ -354,9 +355,11 @@ ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=2
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=true
+ProjectManager.CustomerFirmwarePackage=
+ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F405RGTx
-ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.13.1
+ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.14.0
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x3C00
