turn on aux ch pwm TIM2

--- a/Odrive.ioc
+++ b/Odrive.ioc
@@ -86,9 +86,10 @@ KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
-Mcu.IP10=TIM3
-Mcu.IP11=TIM4
-Mcu.IP12=TIM8
+Mcu.IP10=TIM2
+Mcu.IP11=TIM3
+Mcu.IP12=TIM4
+Mcu.IP13=TIM8
 Mcu.IP2=ADC3
 Mcu.IP3=CAN1
 Mcu.IP4=FREERTOS
@@ -97,7 +98,7 @@ Mcu.IP6=RCC
 Mcu.IP7=SPI3
 Mcu.IP8=SYS
 Mcu.IP9=TIM1
-Mcu.IPNb=13
+Mcu.IPNb=14
 Mcu.Name=STM32F405RGTx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
@@ -230,11 +231,11 @@ PB1.Signal=TIM8_CH3N
 PB10.GPIOParameters=GPIO_Label
 PB10.GPIO_Label=AUX_L
 PB10.Locked=true
-PB10.Signal=GPIO_Output
+PB10.Signal=S_TIM2_CH3
 PB11.GPIOParameters=GPIO_Label
 PB11.GPIO_Label=AUX_H
 PB11.Locked=true
-PB11.Signal=GPIO_Output
+PB11.Signal=S_TIM2_CH4
 PB12.GPIOParameters=GPIO_Label
 PB12.GPIO_Label=EN_GATE
 PB12.Locked=true
@@ -374,7 +375,7 @@ ProjectManager.StackSize=0x800
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=/home/oskar/ODriveFirmware
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-MX_ADC1_Init-ADC1-false-HAL,3-MX_ADC2_Init-ADC2-false-HAL,4-MX_CAN1_Init-CAN1-false-HAL,5-MX_TIM1_Init-TIM1-false-HAL,6-MX_TIM8_Init-TIM8-false-HAL,7-MX_TIM3_Init-TIM3-false-HAL,8-MX_TIM4_Init-TIM4-false-HAL,9-MX_SPI3_Init-SPI3-false-HAL,10-MX_ADC3_Init-ADC3-false-HAL,11-SystemClock_Config-RCC-false-HAL
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-MX_ADC1_Init-ADC1-false-HAL,3-MX_ADC2_Init-ADC2-false-HAL,4-MX_CAN1_Init-CAN1-false-HAL,5-MX_TIM1_Init-TIM1-false-HAL,6-MX_TIM8_Init-TIM8-false-HAL,7-MX_TIM3_Init-TIM3-false-HAL,8-MX_TIM4_Init-TIM4-false-HAL,9-MX_SPI3_Init-SPI3-false-HAL,10-MX_ADC3_Init-ADC3-false-HAL,11-SystemClock_Config-RCC-false-HAL,12-MX_TIM2_Init-TIM2-false-HAL
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -460,6 +461,10 @@ SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2 CH2N
 SH.S_TIM1_CH2.ConfNb=1
 SH.S_TIM1_CH3.0=TIM1_CH3,PWM Generation3 CH3 CH3N
 SH.S_TIM1_CH3.ConfNb=1
+SH.S_TIM2_CH3.0=TIM2_CH3,PWM Generation3 CH3
+SH.S_TIM2_CH3.ConfNb=1
+SH.S_TIM2_CH4.0=TIM2_CH4,PWM Generation4 CH4
+SH.S_TIM2_CH4.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,Encoder_Interface
 SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2,Encoder_Interface
@@ -497,6 +502,15 @@ TIM1.OffStateIDLEMode=TIM_OSSI_ENABLE
 TIM1.OffStateRunMode=TIM_OSSR_ENABLE
 TIM1.Period=TIM_PERIOD_CLOCKS
 TIM1.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+TIM2.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM2.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
+TIM2.CounterMode=TIM_COUNTERMODE_CENTERALIGNED3
+TIM2.IPParameters=Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,CounterMode,Period,OCMode_PWM-PWM Generation3 CH3,OCMode_PWM-PWM Generation4 CH4,OCPolarity_3,Pulse-PWM Generation4 CH4
+TIM2.OCMode_PWM-PWM\ Generation3\ CH3=TIM_OCMODE_PWM2
+TIM2.OCMode_PWM-PWM\ Generation4\ CH4=TIM_OCMODE_PWM2
+TIM2.OCPolarity_3=TIM_OCPOLARITY_LOW
+TIM2.Period=TIM_PERIOD_CLOCKS
+TIM2.Pulse-PWM\ Generation4\ CH4=TIM_PERIOD_CLOCKS+1
 TIM3.EncoderMode=TIM_ENCODERMODE_TI12
 TIM3.IC1Filter=4
 TIM3.IC1Polarity=TIM_ICPOLARITY_RISING
