--- a/Odrive.ioc
+++ b/Odrive.ioc
@@ -157,7 +157,7 @@ Mcu.Pin7=PC2
 Mcu.Pin8=PC3
 Mcu.Pin9=PA0-WKUP
 Mcu.PinsNb=55
-Mcu.UserConstants=TIM_CLOCK_HZ,168000000;TIM_PERIOD_CLOCKS,8192;TIM_DEADTIME_CLOCKS,20
+Mcu.UserConstants=TIM_1_8_CLOCK_HZ,168000000;TIM_1_8_PERIOD_CLOCKS,8192;TIM_DEADTIME_CLOCKS,20
 Mcu.UserName=STM32F405RGTx
 MxCube.Version=4.19.0
 MxDb.Version=DB.4.0.190
@@ -500,7 +500,7 @@ TIM1.OCNPolarity_2=TIM_OCNPOLARITY_HIGH
 TIM1.OCNPolarity_3=TIM_OCNPOLARITY_HIGH
 TIM1.OffStateIDLEMode=TIM_OSSI_ENABLE
 TIM1.OffStateRunMode=TIM_OSSR_ENABLE
-TIM1.Period=TIM_PERIOD_CLOCKS
+TIM1.Period=TIM_1_8_PERIOD_CLOCKS
 TIM1.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 TIM2.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM2.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
@@ -509,8 +509,8 @@ TIM2.IPParameters=Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Counte
 TIM2.OCMode_PWM-PWM\ Generation3\ CH3=TIM_OCMODE_PWM2
 TIM2.OCMode_PWM-PWM\ Generation4\ CH4=TIM_OCMODE_PWM2
 TIM2.OCPolarity_3=TIM_OCPOLARITY_LOW
-TIM2.Period=TIM_PERIOD_CLOCKS
-TIM2.Pulse-PWM\ Generation4\ CH4=TIM_PERIOD_CLOCKS+1
+TIM2.Period=TIM_1_8_PERIOD_CLOCKS
+TIM2.Pulse-PWM\ Generation4\ CH4=TIM_1_8_PERIOD_CLOCKS+1
 TIM3.EncoderMode=TIM_ENCODERMODE_TI12
 TIM3.IC1Filter=4
 TIM3.IC1Polarity=TIM_ICPOLARITY_RISING
@@ -536,7 +536,7 @@ TIM8.OCMode_PWM-PWM\ Generation2\ CH2\ CH2N=TIM_OCMODE_PWM2
 TIM8.OCMode_PWM-PWM\ Generation3\ CH3\ CH3N=TIM_OCMODE_PWM2
 TIM8.OffStateIDLEMode=TIM_OSSI_ENABLE
 TIM8.OffStateRunMode=TIM_OSSR_ENABLE
-TIM8.Period=TIM_PERIOD_CLOCKS
+TIM8.Period=TIM_1_8_PERIOD_CLOCKS
 TIM8.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 VP_FREERTOS_VS_ENABLE.Mode=Enabled
 VP_FREERTOS_VS_ENABLE.Signal=FREERTOS_VS_ENABLE
