update used constants

--- a/Odrive.ioc
+++ b/Odrive.ioc
@@ -157,7 +157,7 @@ Mcu.Pin7=PC2
 Mcu.Pin8=PC3
 Mcu.Pin9=PA0-WKUP
 Mcu.PinsNb=55
-Mcu.UserConstants=TIM_1_8_CLOCK_HZ,168000000;TIM_1_8_PERIOD_CLOCKS,8192;TIM_DEADTIME_CLOCKS,20
+Mcu.UserConstants=TIM_1_8_CLOCK_HZ,168000000;TIM_1_8_PERIOD_CLOCKS,8192;TIM_1_8_DEADTIME_CLOCKS,20;TIM_APB1_CLOCK_HZ,84000000;TIM_APB1_PERIOD_CLOCKS,4096
 Mcu.UserName=STM32F405RGTx
 MxCube.Version=4.19.0
 MxDb.Version=DB.4.0.190
@@ -490,7 +490,7 @@ TIM1.Channel-Output\ Compare4\ No\ Output=TIM_CHANNEL_4
 TIM1.Channel-PWM\ Generation2\ CH2\ CH2N=TIM_CHANNEL_2
 TIM1.Channel-PWM\ Generation3\ CH3\ CH3N=TIM_CHANNEL_3
 TIM1.CounterMode=TIM_COUNTERMODE_CENTERALIGNED3
-TIM1.DeadTime=TIM_DEADTIME_CLOCKS
+TIM1.DeadTime=TIM_1_8_DEADTIME_CLOCKS
 TIM1.IPParameters=Channel-PWM Generation2 CH2 CH2N,Channel-PWM Generation3 CH3 CH3N,OCNPolarity_1,OCNPolarity_2,OCNPolarity_3,CounterMode,OCMode_PWM-PWM Generation1 CH1 CH1N,OCMode_PWM-PWM Generation2 CH2 CH2N,OCMode_PWM-PWM Generation3 CH3 CH3N,Period,DeadTime,OffStateRunMode,OffStateIDLEMode,Channel-Output Compare4 No Output,TIM_MasterOutputTrigger
 TIM1.OCMode_PWM-PWM\ Generation1\ CH1\ CH1N=TIM_OCMODE_PWM2
 TIM1.OCMode_PWM-PWM\ Generation2\ CH2\ CH2N=TIM_OCMODE_PWM2
@@ -509,8 +509,8 @@ TIM2.IPParameters=Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Counte
 TIM2.OCMode_PWM-PWM\ Generation3\ CH3=TIM_OCMODE_PWM2
 TIM2.OCMode_PWM-PWM\ Generation4\ CH4=TIM_OCMODE_PWM2
 TIM2.OCPolarity_3=TIM_OCPOLARITY_LOW
-TIM2.Period=TIM_1_8_PERIOD_CLOCKS
-TIM2.Pulse-PWM\ Generation4\ CH4=TIM_1_8_PERIOD_CLOCKS+1
+TIM2.Period=TIM_APB1_PERIOD_CLOCKS
+TIM2.Pulse-PWM\ Generation4\ CH4=TIM_APB1_PERIOD_CLOCKS+1
 TIM3.EncoderMode=TIM_ENCODERMODE_TI12
 TIM3.IC1Filter=4
 TIM3.IC1Polarity=TIM_ICPOLARITY_RISING
@@ -529,7 +529,7 @@ TIM8.Channel-Output\ Compare4\ No\ Output=TIM_CHANNEL_4
 TIM8.Channel-PWM\ Generation2\ CH2\ CH2N=TIM_CHANNEL_2
 TIM8.Channel-PWM\ Generation3\ CH3\ CH3N=TIM_CHANNEL_3
 TIM8.CounterMode=TIM_COUNTERMODE_CENTERALIGNED3
-TIM8.DeadTime=TIM_DEADTIME_CLOCKS
+TIM8.DeadTime=TIM_1_8_DEADTIME_CLOCKS
 TIM8.IPParameters=Channel-PWM Generation3 CH3 CH3N,Channel-PWM Generation2 CH2 CH2N,CounterMode,Period,OffStateRunMode,OffStateIDLEMode,DeadTime,OCMode_PWM-PWM Generation1 CH1 CH1N,OCMode_PWM-PWM Generation2 CH2 CH2N,OCMode_PWM-PWM Generation3 CH3 CH3N,Channel-Output Compare4 No Output,TIM_MasterOutputTrigger
 TIM8.OCMode_PWM-PWM\ Generation1\ CH1\ CH1N=TIM_OCMODE_PWM2
 TIM8.OCMode_PWM-PWM\ Generation2\ CH2\ CH2N=TIM_OCMODE_PWM2
