--- a/Odrive.ioc
+++ b/Odrive.ioc
@@ -88,6 +88,8 @@ Mcu.IP1=ADC2
 Mcu.IP10=TIM3
 Mcu.IP11=TIM4
 Mcu.IP12=TIM8
+Mcu.IP13=USB_DEVICE
+Mcu.IP14=USB_OTG_FS
 Mcu.IP2=ADC3
 Mcu.IP3=CAN1
 Mcu.IP4=FREERTOS
@@ -96,7 +98,7 @@ Mcu.IP6=RCC
 Mcu.IP7=SPI3
 Mcu.IP8=SYS
 Mcu.IP9=TIM1
-Mcu.IPNb=13
+Mcu.IPNb=15
 Mcu.Name=STM32F405RGTx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
@@ -128,33 +130,36 @@ Mcu.Pin31=PC9
 Mcu.Pin32=PA8
 Mcu.Pin33=PA9
 Mcu.Pin34=PA10
-Mcu.Pin35=PA13
-Mcu.Pin36=PA14
-Mcu.Pin37=PA15
-Mcu.Pin38=PC10
-Mcu.Pin39=PC11
+Mcu.Pin35=PA11
+Mcu.Pin36=PA12
+Mcu.Pin37=PA13
+Mcu.Pin38=PA14
+Mcu.Pin39=PA15
 Mcu.Pin4=PH1-OSC_OUT
-Mcu.Pin40=PC12
-Mcu.Pin41=PD2
-Mcu.Pin42=PB3
-Mcu.Pin43=PB4
-Mcu.Pin44=PB5
-Mcu.Pin45=PB6
-Mcu.Pin46=PB7
-Mcu.Pin47=PB8
-Mcu.Pin48=PB9
-Mcu.Pin49=VP_FREERTOS_VS_ENABLE
+Mcu.Pin40=PC10
+Mcu.Pin41=PC11
+Mcu.Pin42=PC12
+Mcu.Pin43=PD2
+Mcu.Pin44=PB3
+Mcu.Pin45=PB4
+Mcu.Pin46=PB5
+Mcu.Pin47=PB6
+Mcu.Pin48=PB7
+Mcu.Pin49=PB8
 Mcu.Pin5=PC0
-Mcu.Pin50=VP_SYS_VS_Systick
-Mcu.Pin51=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin52=VP_TIM1_VS_no_output4
-Mcu.Pin53=VP_TIM8_VS_ClockSourceINT
-Mcu.Pin54=VP_TIM8_VS_no_output4
+Mcu.Pin50=PB9
+Mcu.Pin51=VP_FREERTOS_VS_ENABLE
+Mcu.Pin52=VP_SYS_VS_Systick
+Mcu.Pin53=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin54=VP_TIM1_VS_no_output4
+Mcu.Pin55=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin56=VP_TIM8_VS_no_output4
+Mcu.Pin57=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2
 Mcu.Pin8=PC3
 Mcu.Pin9=PA0-WKUP
-Mcu.PinsNb=55
+Mcu.PinsNb=58
 Mcu.UserConstants=TIM_CLOCK_HZ,168000000;TIM_PERIOD_CLOCKS,8192;TIM_DEADTIME_CLOCKS,20
 Mcu.UserName=STM32F405RGTx
 MxCube.Version=4.17.0
@@ -165,6 +170,7 @@ NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.OTG_FS_IRQn=true\:5\:0\:false\:false\:true\:true
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false
@@ -180,6 +186,10 @@ PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=M0_CH
 PA10.Locked=true
 PA10.Signal=S_TIM1_CH3
+PA11.Mode=Device_Only
+PA11.Signal=USB_OTG_FS_DM
+PA12.Mode=Device_Only
+PA12.Signal=USB_OTG_FS_DP
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
@@ -354,6 +364,8 @@ ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=2
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=true
+ProjectManager.CustomerFirmwarePackage=
+ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F405RGTx
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.13.1
@@ -371,7 +383,7 @@ ProjectManager.StackSize=0x800
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=/home/oskar/ODriveFirmware
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-MX_ADC1_Init-ADC1-false-HAL,3-MX_ADC2_Init-ADC2-false-HAL,4-MX_CAN1_Init-CAN1-false-HAL,5-MX_TIM1_Init-TIM1-false-HAL,6-MX_TIM8_Init-TIM8-false-HAL,7-MX_TIM3_Init-TIM3-false-HAL,8-MX_TIM4_Init-TIM4-false-HAL,9-MX_SPI3_Init-SPI3-false-HAL,10-MX_ADC3_Init-ADC3-false-HAL,11-SystemClock_Config-RCC-false-HAL
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-MX_ADC1_Init-ADC1-false-HAL,3-MX_ADC2_Init-ADC2-false-HAL,4-MX_CAN1_Init-CAN1-false-HAL,5-MX_TIM1_Init-TIM1-false-HAL,6-MX_TIM8_Init-TIM8-false-HAL,7-MX_TIM3_Init-TIM3-false-HAL,8-MX_TIM4_Init-TIM4-false-HAL,9-MX_SPI3_Init-SPI3-false-HAL,10-MX_ADC3_Init-ADC3-false-HAL,11-SystemClock_Config-RCC-false-HAL,12-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -390,7 +402,7 @@ RCC.HCLKFreq_Value=168000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=192000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimCLKDivider,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimCLKDivider,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLSourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimCLKDivider,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimCLKDivider,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
 RCC.MCO2PinFreq_Value=168000000
@@ -521,6 +533,20 @@ TIM8.OffStateIDLEMode=TIM_OSSI_ENABLE
 TIM8.OffStateRunMode=TIM_OSSR_ENABLE
 TIM8.Period=TIM_PERIOD_CLOCKS
 TIM8.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+USB_DEVICE.CLASS_NAME-CDC_FS=CDC
+USB_DEVICE.CLASS_NAME_FS=CDC
+USB_DEVICE.IPParameters=VirtualMode-CDC_FS,VirtualModeFS,USBD_HandleTypeDef-CDC_FS,CLASS_NAME-CDC_FS,CLASS_NAME_FS,MANUFACTURER_STRING-CDC_FS,PRODUCT_STRING_CDC_FS,VID-CDC_FS,PID_CDC_FS,SERIALNUMBER_STRING_CDC_FS
+USB_DEVICE.MANUFACTURER_STRING-CDC_FS=ODrive
+USB_DEVICE.PID_CDC_FS=0x0D31
+USB_DEVICE.PRODUCT_STRING_CDC_FS=ODrive rev 3.1
+USB_DEVICE.SERIALNUMBER_STRING_CDC_FS=000000000001
+USB_DEVICE.USBD_HandleTypeDef-CDC_FS=hUsbDeviceFS
+USB_DEVICE.VID-CDC_FS=0x1209
+USB_DEVICE.VirtualMode-CDC_FS=Cdc
+USB_DEVICE.VirtualModeFS=Cdc_FS
+USB_OTG_FS.IPParameters=VirtualMode,vbus_sensing_enable
+USB_OTG_FS.VirtualMode=Device_Only
+USB_OTG_FS.vbus_sensing_enable=DISABLE
 VP_FREERTOS_VS_ENABLE.Mode=Enabled
 VP_FREERTOS_VS_ENABLE.Signal=FREERTOS_VS_ENABLE
 VP_SYS_VS_Systick.Mode=SysTick
@@ -533,4 +559,6 @@ VP_TIM8_VS_ClockSourceINT.Mode=Internal
 VP_TIM8_VS_ClockSourceINT.Signal=TIM8_VS_ClockSourceINT
 VP_TIM8_VS_no_output4.Mode=Output Compare4 No Output
 VP_TIM8_VS_no_output4.Signal=TIM8_VS_no_output4
+VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
+VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=Odrive
