--- a/Odrive.ioc
+++ b/Odrive.ioc
@@ -1,5 +1,4 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.AutoInjectedConv=DISABLE
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_5
 ADC1.Channel-1\#ChannelInjectedConversion=ADC_CHANNEL_0
 ADC1.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4
@@ -13,10 +12,9 @@ ADC1.ExternalTrigConv=ADC_SOFTWARE_START
 ADC1.ExternalTrigConvEdge=ADC_EXTERNALTRIGCONVEDGE_NONE
 ADC1.ExternalTrigInjecConv=ADC_EXTERNALTRIGINJECCONV_T1_CC4
 ADC1.ExternalTrigInjecConvEdge=ADC_EXTERNALTRIGINJECCONVEDGE_RISING
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master,ClockPrescaler,Resolution,DataAlign,ScanConvMode,ContinuousConvMode,DiscontinuousConvMode,DMAContinuousRequests,EOCSelection,NbrOfConversion,ExternalTrigConvEdge,InjNumberOfConversion,EnableAnalogWatchDog,Rank-1\#ChannelInjectedConversion,Channel-1\#ChannelInjectedConversion,SamplingTime-1\#ChannelInjectedConversion,InjectedOffset-1\#ChannelInjectedConversion,InjectedConvMode,ExternalTrigInjecConvEdge,ExternalTrigInjecConv,ExternalTrigConv,AutoInjectedConv,InjectedDiscontinuousConvMode
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master,ClockPrescaler,Resolution,DataAlign,ScanConvMode,ContinuousConvMode,DiscontinuousConvMode,DMAContinuousRequests,EOCSelection,NbrOfConversion,ExternalTrigConvEdge,InjNumberOfConversion,EnableAnalogWatchDog,Rank-1\#ChannelInjectedConversion,Channel-1\#ChannelInjectedConversion,SamplingTime-1\#ChannelInjectedConversion,InjectedOffset-1\#ChannelInjectedConversion,InjectedConvMode,ExternalTrigInjecConvEdge,ExternalTrigInjecConv,ExternalTrigConv
 ADC1.InjNumberOfConversion=1
 ADC1.InjectedConvMode=None
-ADC1.InjectedDiscontinuousConvMode=DISABLE
 ADC1.InjectedOffset-1\#ChannelInjectedConversion=0
 ADC1.NbrOfConversion=1
 ADC1.NbrOfConversionFlag=1
@@ -27,7 +25,6 @@ ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.SamplingTime-1\#ChannelInjectedConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.ScanConvMode=DISABLE
 ADC1.master=1
-ADC2.AutoInjectedConv=DISABLE
 ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_13
 ADC2.Channel-1\#ChannelInjectedConversion=ADC_CHANNEL_10
 ADC2.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4
@@ -41,10 +38,9 @@ ADC2.ExternalTrigConv=ADC_EXTERNALTRIGCONV_T8_TRGO
 ADC2.ExternalTrigConvEdge=ADC_EXTERNALTRIGCONVEDGE_RISING
 ADC2.ExternalTrigInjecConv=ADC_EXTERNALTRIGINJECCONV_T1_CC4
 ADC2.ExternalTrigInjecConvEdge=ADC_EXTERNALTRIGINJECCONVEDGE_RISING
-ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler,Resolution,DataAlign,ScanConvMode,ContinuousConvMode,DiscontinuousConvMode,DMAContinuousRequests,EOCSelection,NbrOfConversion,InjNumberOfConversion,EnableAnalogWatchDog,Rank-1\#ChannelInjectedConversion,Channel-1\#ChannelInjectedConversion,SamplingTime-1\#ChannelInjectedConversion,InjectedOffset-1\#ChannelInjectedConversion,ExternalTrigInjecConvEdge,ExternalTrigConvEdge,InjectedConvMode,ExternalTrigInjecConv,ExternalTrigConv,AutoInjectedConv,InjectedDiscontinuousConvMode
+ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler,Resolution,DataAlign,ScanConvMode,ContinuousConvMode,DiscontinuousConvMode,DMAContinuousRequests,EOCSelection,NbrOfConversion,InjNumberOfConversion,EnableAnalogWatchDog,Rank-1\#ChannelInjectedConversion,Channel-1\#ChannelInjectedConversion,SamplingTime-1\#ChannelInjectedConversion,InjectedOffset-1\#ChannelInjectedConversion,ExternalTrigInjecConvEdge,ExternalTrigConvEdge,InjectedConvMode,ExternalTrigInjecConv,ExternalTrigConv
 ADC2.InjNumberOfConversion=1
 ADC2.InjectedConvMode=None
-ADC2.InjectedDiscontinuousConvMode=DISABLE
 ADC2.InjectedOffset-1\#ChannelInjectedConversion=0
 ADC2.NbrOfConversion=1
 ADC2.NbrOfConversionFlag=1
@@ -54,7 +50,6 @@ ADC2.Resolution=ADC_RESOLUTION_12B
 ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC2.SamplingTime-1\#ChannelInjectedConversion=ADC_SAMPLETIME_3CYCLES
 ADC2.ScanConvMode=DISABLE
-ADC3.AutoInjectedConv=DISABLE
 ADC3.Channel-7\#ChannelRegularConversion=ADC_CHANNEL_12
 ADC3.Channel-8\#ChannelInjectedConversion=ADC_CHANNEL_11
 ADC3.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4
@@ -68,10 +63,9 @@ ADC3.ExternalTrigConv=ADC_EXTERNALTRIGCONV_T8_TRGO
 ADC3.ExternalTrigConvEdge=ADC_EXTERNALTRIGCONVEDGE_RISING
 ADC3.ExternalTrigInjecConv=ADC_EXTERNALTRIGINJECCONV_T1_CC4
 ADC3.ExternalTrigInjecConvEdge=ADC_EXTERNALTRIGINJECCONVEDGE_RISING
-ADC3.IPParameters=Rank-7\#ChannelRegularConversion,Channel-7\#ChannelRegularConversion,SamplingTime-7\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler,Resolution,DataAlign,ScanConvMode,ContinuousConvMode,DiscontinuousConvMode,DMAContinuousRequests,EOCSelection,NbrOfConversion,ExternalTrigConvEdge,InjNumberOfConversion,EnableAnalogWatchDog,Rank-8\#ChannelInjectedConversion,Channel-8\#ChannelInjectedConversion,SamplingTime-8\#ChannelInjectedConversion,InjectedOffset-8\#ChannelInjectedConversion,ExternalTrigInjecConvEdge,InjectedConvMode,ExternalTrigInjecConv,ExternalTrigConv,AutoInjectedConv,InjectedDiscontinuousConvMode
+ADC3.IPParameters=Rank-7\#ChannelRegularConversion,Channel-7\#ChannelRegularConversion,SamplingTime-7\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler,Resolution,DataAlign,ScanConvMode,ContinuousConvMode,DiscontinuousConvMode,DMAContinuousRequests,EOCSelection,NbrOfConversion,ExternalTrigConvEdge,InjNumberOfConversion,EnableAnalogWatchDog,Rank-8\#ChannelInjectedConversion,Channel-8\#ChannelInjectedConversion,SamplingTime-8\#ChannelInjectedConversion,InjectedOffset-8\#ChannelInjectedConversion,ExternalTrigInjecConvEdge,InjectedConvMode,ExternalTrigInjecConv,ExternalTrigConv
 ADC3.InjNumberOfConversion=1
 ADC3.InjectedConvMode=None
-ADC3.InjectedDiscontinuousConvMode=DISABLE
 ADC3.InjectedOffset-8\#ChannelInjectedConversion=0
 ADC3.NbrOfConversion=1
 ADC3.NbrOfConversionFlag=1
@@ -85,9 +79,8 @@ CAN1.CalculateTimeBit=1142
 CAN1.CalculateTimeQuantum=380.95238095238096
 CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit
 FREERTOS.INCLUDE_vTaskDelayUntil=1
-FREERTOS.IPParameters=Tasks01,INCLUDE_vTaskDelayUntil,configUSE_ALTERNATIVE_API
+FREERTOS.IPParameters=Tasks01,INCLUDE_vTaskDelayUntil
 FREERTOS.Tasks01=defaultTask,-3,256,StartDefaultTask,Default
-FREERTOS.configUSE_ALTERNATIVE_API=0
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F4
@@ -169,8 +162,8 @@ Mcu.Pin9=PA0-WKUP
 Mcu.PinsNb=56
 Mcu.UserConstants=TIM_1_8_CLOCK_HZ,168000000;TIM_1_8_PERIOD_CLOCKS,10192;TIM_1_8_DEADTIME_CLOCKS,20;TIM_APB1_CLOCK_HZ,84000000;TIM_APB1_PERIOD_CLOCKS,4096;TIM_APB1_DEADTIME_CLOCKS,20
 Mcu.UserName=STM32F405RGTx
-MxCube.Version=4.20.0
-MxDb.Version=DB.4.0.200
+MxCube.Version=4.22.0
+MxDb.Version=DB.4.0.220
 NVIC.ADC_IRQn=true\:5\:0\:false\:true\:true\:1\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false
@@ -351,7 +344,6 @@ PC9.Signal=GPIO_Output
 PCC.Checker=false
 PCC.Line=STM32F405/415
 PCC.MCU=STM32F405RGTx
-PCC.MXVersion=4.20.0
 PCC.PartNumber=STM32F405RGTx
 PCC.Seq0=0
 PCC.Series=STM32F4
@@ -366,6 +358,7 @@ PH0-OSC_IN.Mode=HSE-External-Oscillator
 PH0-OSC_IN.Signal=RCC_OSC_IN
 PH1-OSC_OUT.Mode=HSE-External-Oscillator
 PH1-OSC_OUT.Signal=RCC_OSC_OUT
+PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=2
@@ -375,7 +368,7 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F405RGTx
-ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.15.0
+ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.16.0
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x3C00
@@ -401,54 +394,27 @@ RCC.APB2CLKDivider=RCC_HCLK_DIV2
 RCC.APB2Freq_Value=84000000
 RCC.APB2TimCLKDivider=1
 RCC.APB2TimFreq_Value=84000000
-RCC.ClockTypeHCLK=RCC_CLOCKTYPE_HCLK
-RCC.ClockTypePCLK1=RCC_CLOCKTYPE_PCLK1
-RCC.ClockTypePCLK2=RCC_CLOCKTYPE_PCLK2
-RCC.ClockTypeSysClk=RCC_CLOCKTYPE_SYSCLK
 RCC.CortexFreq_Value=168000000
-RCC.EnableExtClockForI2S=false
-RCC.EnableHSE=true
-RCC.EnableHSERTCDevisor=false
-RCC.EnableLSE=false
-RCC.EnableLSERTC=false
 RCC.EthernetFreq_Value=168000000
-RCC.ExtClockEnable=false
 RCC.FCLKCortexFreq_Value=168000000
 RCC.FamilyName=M
 RCC.HCLKFreq_Value=168000000
-RCC.HSEState=RCC_HSE_ON
 RCC.HSE_VALUE=8000000
-RCC.HSIState=RCC_HSI_OFF
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=192000000
-RCC.I2SEnable=false
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimCLKDivider,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimCLKDivider,APB2TimFreq_Value,ClockTypeHCLK,ClockTypePCLK1,ClockTypePCLK2,ClockTypeSysClk,CortexFreq_Value,EnableExtClockForI2S,EnableHSE,EnableHSERTCDevisor,EnableLSE,EnableLSERTC,EthernetFreq_Value,ExtClockEnable,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSEState,HSE_VALUE,HSIState,HSI_VALUE,I2SClocksFreq_Value,I2SEnable,IWDGEnable,LSE_VALUE,LSIState,LSI_VALUE,MCO1OutPutEnable,MCO2OutPutEnable,MCO2PinFreq_Value,OscillatorTypeHSE,OscillatorTypeLSI,PLLCLKFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLSource,PLLSourceVirtual,PLLState,RNGEnable,RTCEnable,RTCFreq_Value,RTCHSEDivFreq_Value,SDIOEnable,SYSCLKFreq_VALUE,SYSCLKSource,USBFSEnable,USBHSEnable,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
-RCC.IWDGEnable=false
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimCLKDivider,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimCLKDivider,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 RCC.LSE_VALUE=32768
-RCC.LSIState=RCC_LSI_OFF
 RCC.LSI_VALUE=32000
-RCC.MCO1OutPutEnable=false
-RCC.MCO2OutPutEnable=false
 RCC.MCO2PinFreq_Value=168000000
-RCC.OscillatorTypeHSE=RCC_OSCILLATORTYPE_HSE
-RCC.OscillatorTypeLSI=
 RCC.PLLCLKFreq_Value=168000000
 RCC.PLLM=4
 RCC.PLLN=168
 RCC.PLLQ=7
 RCC.PLLQCLKFreq_Value=48000000
-RCC.PLLSource=RCC_PLLSOURCE_HSE
-RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
-RCC.PLLState=RCC_PLL_ON
-RCC.RNGEnable=false
-RCC.RTCEnable=false
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=4000000
-RCC.SDIOEnable=false
 RCC.SYSCLKFreq_VALUE=168000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.USBFSEnable=true
-RCC.USBHSEnable=false
 RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=336000000
@@ -522,12 +488,11 @@ SH.S_TIM8_CH3.0=TIM8_CH3,PWM Generation3 CH3 CH3N
 SH.S_TIM8_CH3.ConfNb=1
 SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
 SPI3.CLKPhase=SPI_PHASE_2EDGE
-SPI3.CRCPolynomial=10
 SPI3.CalculateBaudRate=2.625 MBits/s
 SPI3.DataSize=SPI_DATASIZE_16BIT
 SPI3.Direction=SPI_DIRECTION_2LINES
 SPI3.FirstBit=SPI_FIRSTBIT_MSB
-SPI3.IPParameters=Mode,CalculateBaudRate,BaudRatePrescaler,DataSize,FirstBit,CLKPhase,VirtualType,Direction,CRCPolynomial
+SPI3.IPParameters=Mode,CalculateBaudRate,BaudRatePrescaler,DataSize,FirstBit,CLKPhase,VirtualType,Direction
 SPI3.Mode=SPI_MODE_MASTER
 SPI3.VirtualType=VM_MASTER
 TIM1.Channel-Output\ Compare4\ No\ Output=TIM_CHANNEL_4
@@ -536,12 +501,10 @@ TIM1.Channel-PWM\ Generation2\ CH2\ CH2N=TIM_CHANNEL_2
 TIM1.Channel-PWM\ Generation3\ CH3\ CH3N=TIM_CHANNEL_3
 TIM1.CounterMode=TIM_COUNTERMODE_CENTERALIGNED3
 TIM1.DeadTime=TIM_1_8_DEADTIME_CLOCKS
-TIM1.DefaultOCFastMode-Output\ Compare4\ No\ Output=TIM_OCFAST_DISABLE
-TIM1.IPParameters=Channel-PWM Generation2 CH2 CH2N,Channel-PWM Generation3 CH3 CH3N,OCNPolarity_1,OCNPolarity_2,OCNPolarity_3,CounterMode,OCMode_PWM-PWM Generation1 CH1 CH1N,OCMode_PWM-PWM Generation2 CH2 CH2N,OCMode_PWM-PWM Generation3 CH3 CH3N,Period,DeadTime,OffStateRunMode,OffStateIDLEMode,Channel-Output Compare4 No Output,TIM_MasterOutputTrigger,Channel-PWM Generation1 CH1 CH1N,DefaultOCFastMode-Output Compare4 No Output,OCNIdleState_4
+TIM1.IPParameters=Channel-PWM Generation2 CH2 CH2N,Channel-PWM Generation3 CH3 CH3N,OCNPolarity_1,OCNPolarity_2,OCNPolarity_3,CounterMode,OCMode_PWM-PWM Generation1 CH1 CH1N,OCMode_PWM-PWM Generation2 CH2 CH2N,OCMode_PWM-PWM Generation3 CH3 CH3N,Period,DeadTime,OffStateRunMode,OffStateIDLEMode,Channel-Output Compare4 No Output,TIM_MasterOutputTrigger,Channel-PWM Generation1 CH1 CH1N
 TIM1.OCMode_PWM-PWM\ Generation1\ CH1\ CH1N=TIM_OCMODE_PWM2
 TIM1.OCMode_PWM-PWM\ Generation2\ CH2\ CH2N=TIM_OCMODE_PWM2
 TIM1.OCMode_PWM-PWM\ Generation3\ CH3\ CH3N=TIM_OCMODE_PWM2
-TIM1.OCNIdleState_4=TIM_OCNIDLESTATE_RESET
 TIM1.OCNPolarity_1=TIM_OCNPOLARITY_HIGH
 TIM1.OCNPolarity_2=TIM_OCNPOLARITY_HIGH
 TIM1.OCNPolarity_3=TIM_OCNPOLARITY_HIGH
@@ -587,18 +550,16 @@ TIM8.OffStateRunMode=TIM_OSSR_ENABLE
 TIM8.Period=TIM_1_8_PERIOD_CLOCKS
 TIM8.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 USB_DEVICE.CLASS_NAME_FS=CDC
-USB_DEVICE.IPParameters=VirtualMode-CDC_FS,VirtualModeFS,CLASS_NAME_FS,MANUFACTURER_STRING-CDC_FS,PRODUCT_STRING_CDC_FS,VID-CDC_FS,PID_CDC_FS,SERIALNUMBER_STRING_CDC_FS,USBD_HandleTypeDef_FS
+USB_DEVICE.IPParameters=VirtualMode-CDC_FS,VirtualModeFS,CLASS_NAME_FS,MANUFACTURER_STRING-CDC_FS,PRODUCT_STRING_CDC_FS,VID-CDC_FS,PID_CDC_FS,SERIALNUMBER_STRING_CDC_FS
 USB_DEVICE.MANUFACTURER_STRING-CDC_FS=ODrive
 USB_DEVICE.PID_CDC_FS=0x0D31
 USB_DEVICE.PRODUCT_STRING_CDC_FS=ODrive rev 3.1
 USB_DEVICE.SERIALNUMBER_STRING_CDC_FS=000000000001
-USB_DEVICE.USBD_HandleTypeDef_FS=hUsbDevice_OTG_FS
 USB_DEVICE.VID-CDC_FS=0x1209
 USB_DEVICE.VirtualMode-CDC_FS=Cdc
 USB_DEVICE.VirtualModeFS=Cdc_FS
-USB_OTG_FS.IPParameters=VirtualMode,vbus_sensing_enable,phy_itface
+USB_OTG_FS.IPParameters=VirtualMode,vbus_sensing_enable
 USB_OTG_FS.VirtualMode=Device_Only
-USB_OTG_FS.phy_itface=PCD_PHY_EMBEDDED
 USB_OTG_FS.vbus_sensing_enable=DISABLE
 VP_FREERTOS_VS_ENABLE.Mode=Enabled
 VP_FREERTOS_VS_ENABLE.Signal=FREERTOS_VS_ENABLE
