Remap GPIO 1,3 to interrupt, 2,4 to GPIO in

--- a/Odrive.ioc
+++ b/Odrive.ioc
@@ -1,5 +1,5 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_5
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
 ADC1.Channel-1\#ChannelInjectedConversion=ADC_CHANNEL_0
 ADC1.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4
 ADC1.ContinuousConvMode=DISABLE
@@ -75,14 +75,16 @@ ADC3.Resolution=ADC_RESOLUTION_12B
 ADC3.SamplingTime-7\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC3.SamplingTime-8\#ChannelInjectedConversion=ADC_SAMPLETIME_3CYCLES
 ADC3.ScanConvMode=DISABLE
+CAN1.BS1=CAN_BS1_1TQ
+CAN1.BS2=CAN_BS2_1TQ
 CAN1.CalculateTimeBit=1142
 CAN1.CalculateTimeQuantum=380.95238095238096
-CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit
+CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,BS1,BS2
 FREERTOS.INCLUDE_vTaskDelayUntil=1
 FREERTOS.IPParameters=Tasks01,INCLUDE_vTaskDelayUntil
 FREERTOS.Tasks01=defaultTask,-3,256,StartDefaultTask,Default
 File.Version=6
-KeepUserPlacement=false
+KeepUserPlacement=true
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
@@ -164,9 +166,11 @@ Mcu.UserConstants=TIM_1_8_CLOCK_HZ,168000000;TIM_1_8_PERIOD_CLOCKS,10192;TIM_1_8
 Mcu.UserName=STM32F405RGTx
 MxCube.Version=4.22.0
 MxDb.Version=DB.4.0.220
-NVIC.ADC_IRQn=true\:5\:0\:false\:true\:true\:1\:true
+NVIC.ADC_IRQn=true\:5\:0\:false\:false\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.EXTI2_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.EXTI4_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false
@@ -203,13 +207,16 @@ PA2.GPIO_Label=AUX_I
 PA2.Signal=ADCx_IN2
 PA3.GPIOParameters=GPIO_Label
 PA3.GPIO_Label=GPIO_4
-PA3.Signal=ADCx_IN3
+PA3.Locked=true
+PA3.Signal=GPIO_Input
 PA4.GPIOParameters=GPIO_Label
 PA4.GPIO_Label=GPIO_3
-PA4.Signal=ADCx_IN4
+PA4.Locked=true
+PA4.Signal=GPXTI4
 PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=GPIO_2
-PA5.Signal=ADCx_IN5
+PA5.Locked=true
+PA5.Signal=GPIO_Input
 PA6.GPIOParameters=GPIO_Label
 PA6.GPIO_Label=AUX_V
 PA6.Signal=ADCx_IN6
@@ -266,7 +273,7 @@ PB15.Signal=TIM1_CH3N
 PB2.GPIOParameters=GPIO_Label
 PB2.GPIO_Label=GPIO_1
 PB2.Locked=true
-PB2.Signal=GPIO_Input
+PB2.Signal=GPXTI2
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=M1_ENC_Z
 PB3.Locked=true
@@ -388,7 +395,6 @@ RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=42000000
-RCC.APB1TimCLKDivider=2
 RCC.APB1TimFreq_Value=84000000
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
 RCC.APB2Freq_Value=84000000
@@ -402,7 +408,7 @@ RCC.HCLKFreq_Value=168000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=192000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimCLKDivider,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimCLKDivider,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimCLKDivider,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
 RCC.MCO2PinFreq_Value=168000000
@@ -450,18 +456,13 @@ SH.ADCx_IN15.ConfNb=2
 SH.ADCx_IN2.0=ADC1_IN2,IN2
 SH.ADCx_IN2.1=ADC2_IN2,IN2
 SH.ADCx_IN2.ConfNb=2
-SH.ADCx_IN3.0=ADC1_IN3,IN3
-SH.ADCx_IN3.1=ADC2_IN3,IN3
-SH.ADCx_IN3.ConfNb=2
-SH.ADCx_IN4.0=ADC1_IN4,IN4
-SH.ADCx_IN4.1=ADC2_IN4,IN4
-SH.ADCx_IN4.ConfNb=2
-SH.ADCx_IN5.0=ADC1_IN5,IN5
-SH.ADCx_IN5.1=ADC2_IN5,IN5
-SH.ADCx_IN5.ConfNb=2
 SH.ADCx_IN6.0=ADC1_IN6,IN6
 SH.ADCx_IN6.1=ADC2_IN6,IN6
 SH.ADCx_IN6.ConfNb=2
+SH.GPXTI2.0=GPIO_EXTI2
+SH.GPXTI2.ConfNb=1
+SH.GPXTI4.0=GPIO_EXTI4
+SH.GPXTI4.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1 CH1N
 SH.S_TIM1_CH1.ConfNb=1
 SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2 CH2N
