pulldown on step/dir pins

--- a/Odrive.ioc
+++ b/Odrive.ioc
@@ -205,16 +205,19 @@ PA15.Signal=GPIO_Input
 PA2.GPIOParameters=GPIO_Label
 PA2.GPIO_Label=AUX_I
 PA2.Signal=ADCx_IN2
-PA3.GPIOParameters=GPIO_Label
+PA3.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA3.GPIO_Label=GPIO_4
+PA3.GPIO_PuPd=GPIO_PULLDOWN
 PA3.Locked=true
 PA3.Signal=GPIO_Input
-PA4.GPIOParameters=GPIO_Label
+PA4.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA4.GPIO_Label=GPIO_3
+PA4.GPIO_PuPd=GPIO_PULLDOWN
 PA4.Locked=true
 PA4.Signal=GPXTI4
-PA5.GPIOParameters=GPIO_Label
+PA5.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA5.GPIO_Label=GPIO_2
+PA5.GPIO_PuPd=GPIO_PULLDOWN
 PA5.Locked=true
 PA5.Signal=GPIO_Input
 PA6.GPIOParameters=GPIO_Label
@@ -270,8 +273,9 @@ PB15.GPIO_Label=M0_CL
 PB15.Locked=true
 PB15.Mode=PWM Generation3 CH3 CH3N
 PB15.Signal=TIM1_CH3N
-PB2.GPIOParameters=GPIO_Label
+PB2.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB2.GPIO_Label=GPIO_1
+PB2.GPIO_PuPd=GPIO_PULLDOWN
 PB2.Locked=true
 PB2.Signal=GPXTI2
 PB3.GPIOParameters=GPIO_Label
